; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_act.c_bta_hf_client_rfc_close.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_act.c_bta_hf_client_rfc_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 (i32, i32*)* }
%struct.TYPE_3__ = type { i64, i32, i64, i32, i64, i64, i32, i64, i64 }

@bta_hf_client_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@BTA_HF_CLIENT_ACP = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@BTM_SCO_CODEC_CVSD = common dso_local global i32 0, align 4
@BTA_ID_HS = common dso_local global i32 0, align 4
@BTA_HF_CLIENT_CLOSE_EVT = common dso_local global i32 0, align 4
@bd_addr_null = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_hf_client_rfc_close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @UNUSED(i32* %3)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 8), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 7), align 8
  %5 = load i32, i32* @BTA_HF_CLIENT_ACP, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 6), align 8
  %6 = load i64, i64* @FALSE, align 8
  store i64 %6, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 5), align 8
  %7 = load i64, i64* @FALSE, align 8
  store i64 %7, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 4), align 8
  %8 = load i32, i32* @BTM_SCO_CODEC_CVSD, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 3), align 8
  %9 = call i32 (...) @bta_hf_client_at_reset()
  %10 = load i32, i32* @BTA_ID_HS, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 1), align 8
  %12 = call i32 @bta_sys_conn_close(i32 %10, i32 1, i32 %11)
  %13 = load i32 (i32, i32*)*, i32 (i32, i32*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 1), align 8
  %14 = load i32, i32* @BTA_HF_CLIENT_CLOSE_EVT, align 4
  %15 = call i32 %13(i32 %14, i32* null)
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 0), align 8
  %17 = load i64, i64* @FALSE, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %1
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 1), align 8
  %21 = load i32, i32* @bd_addr_null, align 4
  %22 = call i32 @bdcpy(i32 %20, i32 %21)
  %23 = call i32 (...) @bta_hf_client_start_server()
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 2), align 8
  %24 = call i32 @bta_hf_client_sco_shutdown(i32* null)
  %25 = load i32, i32* @BTA_ID_HS, align 4
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_hf_client_cb, i32 0, i32 0, i32 1), align 8
  %27 = call i32 @bta_sys_sco_unuse(i32 %25, i32 1, i32 %26)
  br label %31

28:                                               ; preds = %1
  %29 = call i32 (...) @bta_hf_client_close_server()
  %30 = call i32 (...) @bta_hf_client_scb_disable()
  br label %31

31:                                               ; preds = %28, %19
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @bta_hf_client_at_reset(...) #1

declare dso_local i32 @bta_sys_conn_close(i32, i32, i32) #1

declare dso_local i32 @bdcpy(i32, i32) #1

declare dso_local i32 @bta_hf_client_start_server(...) #1

declare dso_local i32 @bta_hf_client_sco_shutdown(i32*) #1

declare dso_local i32 @bta_sys_sco_unuse(i32, i32, i32) #1

declare dso_local i32 @bta_hf_client_close_server(...) #1

declare dso_local i32 @bta_hf_client_scb_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
